ADD_LIBRARY(codegen_types INTERFACE)

IF(CIP_BUILD_SYSTEM_VERSION)
    TARGET_INCLUDE_DIRECTORIES(codegen_types
        INTERFACE
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    )

ELSE()
    TARGET_INCLUDE_DIRECTORIES(codegen_types
        INTERFACE
            ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF()
