ADD_LIBRARY(codegen_interface_c INTERFACE)

IF(CIP_BUILD_SYSTEM_VERSION)
    TARGET_INCLUDE_DIRECTORIES(codegen_interface_c
        INTERFACE
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    )

ELSE()
    TARGET_INCLUDE_DIRECTORIES(codegen_interface_c
        INTERFACE
            ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF()
