cmake_minimum_required(VERSION 3.5)
project(MoCo_Brake)

find_package(CLSI_UTILS REQUIRED)

# CARMAKER & MATLAB VERSIONS
SET(CARMAKER_INC_DIR ${CARMAKER_DIR}/include)

SET(MATLAB_VER R2019b)
SET(MATLAB_DIR ${CLSI_UTILS_PACKAGE_PATH}/include/matlab/${MATLAB_VER})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)




IF(WIN32)
	ADD_COMPILE_DEFINITIONS(WIN32 WIN64 _DEBUG _LIB RT_MALLOC MATSUPP_NUMVER=90700 PARAMID=1 ARCH="win64" MODEL=MoCo_Brake_Autocode
		WRAPPER=MoCo_Brake_Autocode_wrap CLASS=Generic NUMST=2 NCSTATES=7 HAVESTDIO RT USE_RTMODEL ALLOCATIONFCN=1 TID01EQ=1 MAT_FILE=0
		ONESTEPFCN=1 TERMFCN=1 MULTI_INSTANCE_CODE=1 INTEGER_CODE=0 MT=0 BUILDDATE="" BUILDTIME="" _CRT_SECURE_NO_WARNINGS
		_CRT_NONSTDC_NO_DEPRECATE _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS CM_NUMVER=${CM_NUMVER})
	ADD_COMPILE_OPTIONS(/wd4251)
	ADD_LINK_OPTIONS(-SAFESEH:NO)
ELSEIF(UNIX)
	ADD_COMPILE_DEFINITIONS(LINUX LINUX64 _GNU_SOURCE _FILE_OFFSET_BITS=64 
		RT_MALLOC MATSUPP_NUMVER=90700 PARAMID=1 ARCH="linux64" MODEL=MoCo_Brake_Autocode
		WRAPPER=MoCo_Brake_Autocode_wrap CLASS=Generic NUMST=2 NCSTATES=7 HAVESTDIO RT USE_RTMODEL ALLOCATIONFCN=1 TID01EQ=1 MAT_FILE=0
		ONESTEPFCN=1 TERMFCN=1 MULTI_INSTANCE_CODE=1 INTEGER_CODE=0 MT=0 BUILDDATE="" BUILDTIME="" _CRT_SECURE_NO_WARNINGS
		_CRT_NONSTDC_NO_DEPRECATE _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS CM_NUMVER=${CM_NUMVER}
	)
	ADD_COMPILE_OPTIONS(-O3 -m64 -fPIC -Wall -march=native)
	ADD_LINK_OPTIONS(-m64 -fPIC)
ENDIF()

# source files of the executable
add_library(${PROJECT_NAME} STATIC
    MoCo_Brake_Autocode_CarMaker_rtw/MoCo_Brake_Autocode.c
	MoCo_Brake_Autocode_CarMaker_rtw/MoCo_Brake_Autocode_capi.c
	MoCo_Brake_Autocode_CarMaker_rtw/MoCo_Brake_Autocode_data.c
	MoCo_Brake_Autocode_CarMaker_rtw/MoCo_Brake_Autocode_wrap.c
)

# Specify path to internal CarMaker interfaces
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PUBLIC
		${CARMAKER_INC_DIR}
		MoCo_Brake_Autocode_CarMaker_rtw/
		MoCo_Brake_Autocode_CarMaker_rtw/referenced_model_includes
		slprj/CarMaker/_sharedutils
		${MATLAB_DIR}/simulink/include
		${MATLAB_DIR}/extern/include
		${MATLAB_DIR}/rtw/c/src
		${MATLAB_DIR}/rtw/c/src/ext_mode/common
		${CARMAKER_DIR}/Matlab/${MATLAB_VER}
		)
 
# group source files for IDE generation
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR})
 
# install target to destination directory
install(
    TARGETS ${PROJECT_NAME}
    COMPONENT TARGET_COMPONENT
    DESTINATION bin/${PROJECT_NAME}
)