ADD_LIBRARY(codegen_mock_debug INTERFACE)

IF(CIP_BUILD_SYSTEM_VERSION)
    TARGET_INCLUDE_DIRECTORIES(codegen_mock_debug
        INTERFACE
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    )

ELSE()
    TARGET_INCLUDE_DIRECTORIES(codegen_mock_debug
        INTERFACE
            ${CMAKE_CURRENT_SOURCE_DIR}
    )
ENDIF()
